# deep-learning

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-test.yml
docker/: docker-compose.yml
docs/: 1-DeepL.md  2-DeepL.md
src/: 3_neural.py  neural3.ipynb  run.py  simpl_pcept.py  stepsig.ipynb  stepsig.py
src/docs(.ipynb)/: stepsig.ipynb
src/ipynb/: mnist_set.ipynb  set_mnist.ipynb  softmax.ipynb  stepsig.ipynb
src/utils/: neural3.py  simpl_pcept.py  softmax.py
src/utils/MNIST/: mnist.py  neural_mnist.py  set_mnist.py
src/utils/error_reverse/: gradient.py  layers.py  main.py  two_layer_net.py
src/utils/error_reverse/layers/: addlayer.py  affine.py  mutilayer.py  relu.py  sigmoid.py  softmax.py
tests/: test_simpl.py  test_simpl_pcept.py
