[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "python template"
authors = ["exaple@example.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7 <3.9"
numpy = "^1.21.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
